--- a/04_flower/flower.css
+++ b/04_flower/flower.css
@@ -101,6 +101,10 @@ input, select {
   vertical-align:middle;
 }
 
+body, p, h1, h2, h3, h4, h5, h6 {
+    font-family: 'Noto Sans JP', sans-serif;
+}
+
 header {
     background-image: url(header_bg-c9ed7b2e572e200d27cae1b42010563170fdc48ff31e206f9e2c94712ee4773c.jpg);
     height: 830px;
@@ -569,10 +573,6 @@ footer p {
     header {
         height: 600px;
         background-position: center;
-    }
-
-    .p .h2 {
-        font-family: "Hiragino Kaku Gothic ProN";
     }
 
     .header-logo img {
